transaction model pending

--- a/.env copy
+++ b/.env copy
@@ -1,4 +1,11 @@
-PORT = 3000
-FRONTEND_ENDPOINT = ''
-MONGO_CONN_STR = ''
+PORT
+FRONTEND_ENDPOINT
+MONGO_CONN_STR
 
+EMAIL_HOSTNAME
+EMAIL_PORT
+EMAIL_USERNAME
+EMAIL_PASSWORD
+
+JWT_SECRET_KEY
+NODE_ENV
