--- a/.env copy
+++ b/.env copy
@@ -1,11 +1,11 @@
-PORT
-FRONTEND_ENDPOINT
-MONGO_CONN_STR
+PORT = 8000
+FRONTEND_ENDPOINT = 'http://localhost:3000'
+MONGO_CONN_STR = 'mongodb://127.0.0.1:27017/expense-tracker'
 
-EMAIL_HOSTNAME
-EMAIL_PORT
-EMAIL_USERNAME
-EMAIL_PASSWORD
+EMAIL_HOSTNAME = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_USERNAME = ''
+EMAIL_PASSWORD = ''
 
-JWT_SECRET_KEY
-NODE_ENV
+JWT_SECRET_KEY = ''
+NODE_ENV = 'dev'
